id3demux: fix parsing of ID3v2.4 genre frames with multiple genres

We'd only extract the first genre (multiple times) instead of all
genres.

https://bugzilla.gnome.org/show_bug.cgi?id=638535